# SQHell

./: CMakeLists.txt  README.md
shaders/: color.frag  color.vert
source/: sqhell.cpp  sql_bindings.cpp  sql_bindings.h  util.cpp  util.h
source/glad/: glad.c  glad.h
sql/: game.sql  hello_world.sql
